<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_back">


    <TextView
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <com.airbnb.lottie.LottieAnimationView
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/delete_message"
        android:layout_width="150dp"
        android:layout_height="140dp"/>


    <TextView
        android:textColor="#434343"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/are_you_sure_to_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




    <LinearLayout
        android:padding="20dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/deleteNoBtnId"
            android:background="@drawable/no_btn_back"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <TextView
                android:textColor="#272727"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>




        <LinearLayout
            android:id="@+id/deleteYesBtnId"
            android:background="@drawable/yes_btn_back"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>



</LinearLayout>