<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card2"
    tools:context=".NameOfDayActivity">



    <LinearLayout
        android:layout_above="@+id/dayNameAdLayId"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <com.airbnb.lottie.LottieAnimationView
            android:onClick="nameOfDayBackBtn"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:lottie_rawRes="@raw/back_lottie"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/name_of_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_margin="18dp"
                    android:background="@drawable/white_lay_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/enter_date"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/dayDayNameEditId"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/edit_name_back"
                            android:hint="@string/day"
                            android:inputType="date"
                            android:maxLength="2"
                            android:padding="12dp" />


                        <EditText
                            android:id="@+id/monthDayNameEditId"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_toEndOf="@+id/dayDayNameEditId"
                            android:background="@drawable/edit_name_back"
                            android:hint="@string/month"
                            android:inputType="date"
                            android:maxLength="2"
                            android:padding="12dp">

                        </EditText>


                        <EditText
                            android:id="@+id/yearDayNameEditId"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_toEndOf="@+id/monthDayNameEditId"
                            android:background="@drawable/edit_name_back"
                            android:hint="@string/year"
                            android:inputType="date"
                            android:maxLength="4"
                            android:padding="12dp">

                        </EditText>

                    </RelativeLayout>


                </RelativeLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="70dp">


                    <RelativeLayout
                        android:onClick="calculateDayNameBtn"
                        android:id="@+id/calculateRelativeId"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:background="@drawable/name_calculate_back"
                        android:elevation="3dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/calculate"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />



                    </RelativeLayout>


                    <LinearLayout
                        android:onClick="clearDayNameBtn"
                        android:elevation="3dp"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@drawable/clear_back"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/calculateRelativeId"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_clear" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:background="@drawable/white_lay_back"
                    android:layout_margin="18dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="center"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="@string/day_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                    <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/edit_name_back"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:alpha="0"
                            android:id="@+id/dayNameTextId"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:text=""
                            android:padding="10dp"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                </LinearLayout>




            </LinearLayout>

        </ScrollView>




    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/dayNameAdLayId"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.gms.ads.AdView
            android:layout_margin="7dp"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dayNameAdViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>



</RelativeLayout>